--- a/杂想/为什么产品经理与开发有矛盾/index.html
+++ b/杂想/为什么产品经理与开发有矛盾/index.html
@@ -143,15 +143,17 @@ if (!doNotTrack) {
 
   <div class="article-body">
 
-<h3 id="作为一名程序员-你希望与怎样的产品经理合作">作为一名程序员，你希望与怎样的产品经理合作？</h3>
+<blockquote>
+<p>作为一名程序员，你希望与怎样的产品经理合作？</p>
+</blockquote>
 
-<h1 id="产品经理与开发的矛盾">产品经理与开发的矛盾</h1>
+<h3 id="产品经理与开发的矛盾">产品经理与开发的矛盾</h3>
 
 <p>最近一则产品经理和开发打架的新闻在互联网圈闹得沸沸扬扬，产品经理要求开发出app主题颜色随用户手机壳颜色变化的工能。产品经理与开发之间的各种段子由来已久，开发吐槽产品不懂技术，乱改需求，产品吐槽开发天天写bug，能力太差。</p>
 
 <p>其实，在一个项目的生命周期中，产品经理需要与各方沟通，做到项目的全生命周期管理。除了给开发人员提需求，产品经理的职责还有很多。产品经理需要与需求方沟通做需求调研，了解业务流程，需要与视觉设计人员沟通确定视觉页面与交互，需要与测试人员及时沟通确保开发质量，等等等等。但是为什么好像只有开发和产品经理的矛盾很深呢？</p>
 
-<h1 id="矛盾产生的几点原因">矛盾产生的几点原因</h1>
+<h3 id="矛盾产生的几点原因">矛盾产生的几点原因</h3>
 
 <p>首先，一个需求，从需求方到产品经理，到交互设计，都是具体的内容，都是现实生活中存在的实物，是可以直接感知的，所以产品经理和需求方，和交互设计人员的沟通是比较顺畅的，不会有太多的矛盾和误解。</p>
 
@@ -161,7 +163,7 @@ if (!doNotTrack) {
 
 <p>另外，技术的局限性也是引起产品与开发产生误解的一个重要原因。产品经理大多对技术了解没有那么深入，而日新月异发展又让人们都有种技术是万能的错觉。前边提到的让手机主题的颜色随手机壳变化是一个比较极端的例子，正常人大都能看出来这个需求实现的难度。但是其实，对于很多常人看起来来并不是很难的需求，对于开发来基本不可能实现，或者在公司现有的技术栈下，是实现不了的。</p>
 
-<h1 id="展望">展望</h1>
+<h3 id="展望">展望</h3>
 
 <p>因此，在这里我希望可以思考讨论一下，到底产品和开发的关系应该是怎样的。暂定以下几篇文章待写，慢慢思考，慢慢写。</p>
 
